feat(core): unify asset pipeline and enforce end-to-end fallback contracts across views and models
This commit delivers a platform-level hardening of the asset pipeline, default resources,
and model fallback architecture to establish a single, predictable data contract across
DB, JSON, and hard-coded defaults.

### Asset & View Layer Hardening
- Introduced centralized sset() and logo() helpers to eliminate hardcoded paths
- Normalized project image rendering with lazy loading and placeholder fallbacks
- Hardened all views against missing assets and partial data
- Standardized image handling across Home, Projects, Project Detail, About, and Header views

### Asset Restructuring
- Moved project images to a dedicated, semantic location:
  - public/assets/images/projects/* → public/assets/projects/*
- Added production-safe assets:
  - project-placeholder.png
  - logo.png
  - profile.jpg

### Default Resource Normalization
- Aligned all default JSON resources with the real DB schema:
  - Added slug, short_desc, ull_desc, github_url, live_url
- Updated:
  - esources/defaults/home/projects.json
  - esources/defaults/projects/projects.json
- Removed legacy relative paths and deprecated image references

### Model Architecture Hardening
- Enforced a strict and consistent data contract:
  DB → Cache → JSON → Hard fallback
- Refactored AboutModel to use a unified loadUnified() pipeline
- Ensured cache writes occur only on successful DB reads
- Normalized JSON default handling with explicit metadata wrapping

### ProjectModel Fixes
- Standardized default project structures to fully mirror DB rows
- Fixed critical slug resolution bug by adding hard fallback lookup
  when DB and JSON sources are unavailable
- Prevented false 404s for valid fallback-backed project detail pages
- Preserved cache behavior strictly for DB-originated data only

### Configuration Updates
- Updated paths.php to standardize asset URL resolution
- Introduced PROJECT_URL and simplified SITE_LOGO handli

--- a/app/resources/defaults/home/projects.json
+++ b/app/resources/defaults/home/projects.json
@@ -2,8 +2,14 @@
     {
         "id": 0,
         "title": "from defaultPath Portfolio Website",
+        "slug": "personal-portfolio",
+        "short_desc": "Modern developer portfolio website",
         "description": "Dynamic PHP + MySQL website with caching, controllers, models & animations.",
-        "image_path": "assets/img/default-project.jpg",
+        "image_path": "portfolio.png",
+        "full_desc": "This project demonstrates a full MVC PHP architecture with routing, caching, controllers, models, and clean UI animations.",
+        "cover_image": null,
+        "github_url": "https://github.com/Yogesh-Lilake/Portfolio",
+        "live_url": "https://github.com/Yogesh-Lilake/Portfolio",
         "project_link": "#",
         "is_featured": 1,
         "sort_order": 1,
@@ -12,8 +18,14 @@
     {
         "id": 0,
         "title": "D E-Commerce Backend",
-        "description": "Cart, authentication, product management & admin panel.",
-        "image_path": "assets/img/default-project.jpg",
+        "slug": "footwear-ecommerce",
+        "short_desc": "",
+        "description": "A full-stack online store built with PHP, MySQL, and Razorpay integration. Features secure checkout, admin dashboard, and product management.",
+        "full_desc": "",
+        "image_path": "footwear.png",
+        "cover_image": null,
+        "github_url": null,
+        "live_url": null,
         "project_link": "#",
         "is_featured": 1,
         "sort_order": 2,
@@ -21,9 +33,15 @@
     },
     {
         "id": 0,
-        "title": "Analytics Dashboard",
-        "description": "Tailwind + PHP dashboard with chart widgets and API integration.",
-        "image_path": "assets/img/default-project.jpg",
+        "title": "Online Quiz Platform",
+        "slug": "online-quiz-platform",
+        "short_desc": "",
+        "description": "An interactive quiz system where users can take timed tests, view scores, and track progress. Admins can manage questions dynamically.",
+        "full_desc": "",
+        "image_path": "quiz.png",
+        "cover_image": null,
+        "github_url": null,
+        "live_url": null,
         "project_link": "#",
         "is_featured": 1,
         "sort_order": 3,
