--- a/app/resources/defaults/projects/projects.json
+++ b/app/resources/defaults/projects/projects.json
@@ -2,8 +2,14 @@
   {
     "id": 1,
     "title": "from defaultpath Footwear E-Commerce Website",
+    "slug": "footwear-ecommerce",
+    "short_desc": "",
     "description": "A full-stack online store built with PHP, MySQL, and TailwindCSS featuring products, cart, checkout, and admin panel.",
-    "image_path": "../assets/images/projects/footwear.png",
+    "full_desc": "",
+    "image_path": "footwear.png",
+    "cover_image": null,
+    "github_url": null,
+    "live_url": null,
     "project_link": "#",
     "is_featured": 1,
     "is_active": 1,
@@ -12,8 +18,14 @@
   {
     "id": 2,
     "title": "Personal Portfolio",
-    "description": "A modern responsive portfolio site built using TailwindCSS, animations, caching, and PHP MVC structure.",
-    "image_path": "../assets/images/projects/portfolio.png",
+    "slug": "personal-portfolio",
+    "short_desc": "Modern developer portfolio website",
+    "description": "A modern responsive portfolio built using PHP MVC.",
+    "full_desc": "This project demonstrates a full MVC PHP architecture with routing, caching, controllers, models, and clean UI animations.",
+    "image_path": "portfolio.png",
+    "cover_image": null,
+    "github_url": "https://github.com/Yogesh-Lilake/Portfolio",
+    "live_url": "https://github.com/Yogesh-Lilake/Portfolio",
     "project_link": "#",
     "is_featured": 1,
     "is_active": 1,
@@ -22,8 +34,14 @@
   {
     "id": 3,
     "title": "Android Expense Tracker",
+    "slug": "android-expense-tracker",
+    "short_desc": "",
     "description": "An Android app to track daily expenses, built using Java, SQLite, and chart visualizations.",
-    "image_path": "../assets/images/projects/expense.png",
+    "full_desc": "",
+    "image_path": "expense.png",
+    "cover_image": null,
+    "github_url": null,
+    "live_url": null,
     "project_link": "#",
     "is_featured": 1,
     "is_active": 1,
@@ -32,9 +50,15 @@
   {
     "id": 4,
     "title": "Online Quiz Platform",
+    "slug": "online-quiz-platform",
+    "short_desc": "",
     "description": "An interactive quiz system where users can take timed quizzes and evaluate their scores instantly.",
-    "image_path": "../assets/images/projects/quiz.png",
+    "full_desc": "",
+    "image_path": "quiz.png",
     "project_link": "#",
+    "cover_image": null,
+    "github_url": null,
+    "live_url": null,
     "is_featured": 0,
     "is_active": 1,
     "sort_order": 4
@@ -42,8 +66,14 @@
   {
     "id": 5,
     "title": "Weather Forecast Web App",
+    "slug": "weather-forecast",
+    "short_desc": "",
     "description": "Displays real-time weather data fetched using OpenWeather API. Built using PHP + JavaScript.",
-    "image_path": "../assets/images/projects/weather.png",
+    "full_desc": "",
+    "image_path": "weather.png",
+    "cover_image": null,
+    "github_url": null,
+    "live_url": null,
     "project_link": "#",
     "is_featured": 0,
     "is_active": 1,
@@ -52,8 +82,14 @@
   {
     "id": 6,
     "title": "Library Management System",
+    "slug": "library-management",
+    "short_desc": "",
     "description": "A PHP-MySQL platform for managing books, issuing, returning, and user activity logs.",
-    "image_path": "../assets/images/projects/library.png",
+    "full_desc": "",
+    "image_path": "library.png",
+    "cover_image": null,
+    "github_url": null,
+    "live_url": null,
     "project_link": "#",
     "is_featured": 0,
     "is_active": 1,
